<?xmlxml  versionversion=="1.0""1.0"  encodingencoding=="utf-8""utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.MainActivity">


<!--<android.support.design.widget.AppBarLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:id="@+id/bar"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:theme="@style/AppTheme.AppBarOverlay"-->
   <!--&gt;-->


 <!---->
<!--</android.support.design.widget.AppBarLayout>-->

    <View
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/sep"
        />

<FrameLayout
    android:id="@+id/frame"
   android:layout_below="@+id/sep"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout

    android:layout_width="match_parent"
    android:background="@drawable/bg_cars"
    android:layout_height="match_parent"
   >
    <android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:background="@drawable/bg_chat"
    android:layout_margin="15dp"
    android:padding="20dp"
    android:layout_height="match_parent">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <ImageView
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:src="@drawable/logo"
    />
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:gravity="center"
    android:textSize="18sp"
    android:textStyle="bold"
    android:textColor="@color/colorPrimaryDark"
    android:text="@string/app_name"
    />
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:textColor="@color/black"
    android:gravity="center"
    android:text="@string/main_menu"
    />

    <View
    android:layout_width="match_parent"
    android:background="#ccc"
    android:layout_height="2dp" />





    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:padding="10dp"
    android:id="@+id/go_new_request"
    android:drawableEnd="@drawable/ic_send_request_white"
    android:drawableRight="@drawable/ic_send_request_white"
    android:background="@drawable/bg_button"
    android:textColor="@color/white"
    android:text="@string/new_request"

    />

    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:padding="10dp"
    android:drawableEnd="@drawable/ic_my_requests_white"
    android:drawableRight="@drawable/ic_my_requests_white"
    android:background="@drawable/bg_button"
    android:textColor="@color/white"
    android:text="@string/my_requests"

    />


    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:padding="10dp"
    android:drawableEnd="@drawable/ic_promo_code_white"
    android:drawableRight="@drawable/ic_promo_code_white"
    android:background="@drawable/bg_button"
    android:textColor="@color/white"
    android:text="@string/promo_code"

    />

    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:padding="10dp"
    android:drawableEnd="@drawable/ic_invite_friend_white"
    android:drawableRight="@drawable/ic_invite_friend_white"
    android:background="@drawable/bg_button"
    android:textColor="@color/white"
    android:text="@string/invite_a_friend"

    />


    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:padding="10dp"
    android:drawableEnd="@drawable/ic_support_white"
    android:drawableRight="@drawable/ic_support_white"
    android:background="@drawable/bg_button"
    android:textColor="@color/white"
    android:text="@string/support"

    />

    </LinearLayout>



    </android.support.v4.widget.NestedScrollView>

    </RelativeLayout>
</FrameLayout>




    
    <include  layout="@layout/transparent_toolbar" />
</RelativeLayout>