<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg_cars"
    android:layout_height="match_parent"
    tools:context="ebtkar.app.oilex2.activities.LoginActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/login_title"
        android:textSize="20sp"
        android:textColor="@color/white" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_text"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_chat"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/login_to_your_account"
                android:textSize="15dp"
                android:textColor="@color/black" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:drawableStart="@drawable/ic_phone_icon"
                    android:hint="@string/enter_phone_here"
                    android:inputType="phone"
                    android:padding="10dp"

                    />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:drawableStart="@drawable/ic_lock_icon"
                    android:hint="@string/enter_password_here"
                    android:inputType="textPassword"
                    android:padding="10dp"

                    />
            </android.support.design.widget.TextInputLayout>



            <Button
                android:id="@+id/forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/forget_password"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="start|center_vertical"


                />

            <Button
                android:id="@+id/how_to_be"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="start|center_vertical"
                android:text="@string/how_to_be_a_service_provider" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:visibility="invisible" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/login_as_provider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/login_as_provider"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/login_as_customer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/login_as_customer"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#f4f4f4"
                android:orientation="vertical"
                android:padding="10dp">


                <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_margin="10dp"-->
                    <!--android:gravity="center"-->
                    <!--android:text="@string/login_using_facebook"-->
                    <!--android:textColor="@color/black"-->
                    <!--android:textStyle="bold" />-->
                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RadioButton
                        android:id="@+id/is_customer_fb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:checked="true"

                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/customer"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/is_provider_fb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/service_provider"
                        android:textColor="@color/black" />


                </RadioGroup>



            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/dont_have_an_account_yet" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/go_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/signup"
                    android:textColor="@color/black" />




            </LinearLayout>


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
